tests/variable/local_var_in_initializer.rev
var a = "outer"
{
    var a = a // error: local variable initializer is shadoweding global variable
}